web-infras/parser/tests/fixtures/babel/core/create-parenthesized-expressions/invalid-parenthesized-assignment-pattern-2/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,8)
1|[{b: [([a = 1])]}] = t
 |      ^
